# Plover_Japanese_Chimedori

./: MANIFESTS.in  README.md  setup.cfg  setup.py
Plover_Japanese_Chimedori/: system.py
Plover_Japanese_Chimedori/dictionaries/: chimedori.py  chimedori_commands.json  chimedori_romaji.py
