[metadata]
name = Plover_Japanese_Chimedori
keywords = plover plover_plugin japanese

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
	plover-python-dictionary
packages =
	Plover_Japanese_Chimedori

[options.entry_points]
plover.system =
	Chimedori = Plover_Japanese_Chimedori.system
