[metadata]
name = Plover_Japanese_Chimedori
keywords = plover plover_plugin japanese
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
athor = Kuro Amami
license = GPL-3.0-or-later
url = https://github.com/sing-kuro/Plover_Japanese_Chimedori
description = A Plover plugin for Japanese input using the Chimedori method.

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
	plover-python-dictionary
packages =
	Plover_Japanese_Chimedori

[options.entry_points]
plover.system =
	Chimedori = Plover_Japanese_Chimedori.system
